--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vitest": "^0.31.0"
   }
 }
